make branch for prototype developement

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <main>
         <p>Nye Snauweb!</p>
         <p> Her er en ny paragraf</p>
+        <p> Dette er prototypen til nye Snauweb </p>
     </main>
 </body>
 
