--- a/index.html
+++ b/index.html
@@ -1,13 +1,52 @@
+<!DOCTYPE html>
 <head>
     <meta charset="utf-8"></meta>
     <title>Snauweb beta</title>
+    <link rel="stylesheet" type="text/css" href="index.css"></link>
 </head>
 
 <body>
+    <header>
+        <div class="home_button_wrapper">
+            <div class="home_button">
+                <a href="index.html">
+                    <img
+                        id="top_home_button_image"
+                        src="../snaustrinda_logo.png"
+                        alt="Logo Snaustrinda">
+                    </img>
+                </a>
+            </div>
+        </div>
+        <div class="top_menu">
+            <ul class="top_menu_item_list">
+                <li class ="top_menu_button">
+                    Button element here
+                </li>
+                <li class ="top_menu_button">
+                    Button element here
+                </li>
+            </ul>
+        </div>
+    </header>
+
     <main>
-        <p>Nye Snauweb!</p>
-        <p> Her er en ny paragraf</p>
-        <p> Dette er prototypen til nye Snauweb </p>
+        <div id="main_content">
+            <!-- Conent panes should scale to the page size-->
+            <div class="content_pane">
+                <p>Nye snauweb!</p>
+            </div>
+            <div class="content_pane">
+                <p>Tekst og video!</p>
+            </div>
+            <div class="content_pane">
+                <p>Innhold!</p>
+            </div>
+        </div>
     </main>
+
+    <footer id="footer">
+        Footer text here
+    </footer>
 </body>
 
