set up broad page structure, more progress on mockup

--- a/index.html
+++ b/index.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <head>
-    <meta charset="utf-8"></meta>
-    <title>Snauweb beta</title>
-    <link rel="stylesheet" type="text/css" href="index.css"></link>
+  <meta charset="utf-8"></meta>
+  <title>Snauweb beta</title>
+  <link rel="stylesheet" type="text/css" href="index.css"></link>
 </head>
 
 <body>
+  <div id="content_wrapper">
     <header>
-        <div class="home_button_wrapper">
-            <div class="home_button">
-                <a href="index.html">
-                    <img
-                        id="top_home_button_image"
-                        src="../snaustrinda_logo.png"
-                        alt="Logo Snaustrinda">
-                    </img>
-                </a>
-            </div>
-        </div>
-        <div class="top_menu">
-            <ul class="top_menu_item_list">
-                <li class ="top_menu_button">
-                    Button element here
-                </li>
-                <li class ="top_menu_button">
-                    Button element here
-                </li>
-            </ul>
-        </div>
+      <div id="header_content">
+	<div id="home_button_wrapper">
+	  <div id="home_button" href="index.html">
+	    <a href="index.html">
+	      <img id="home_button_image" src="../snaustrinda_logo_small.png"></img>
+	    </a>
+	  </div>
+	  <div id="header_text">
+	    Snaustrinda
+	  </div>
+	</div>
+	<div id="header_divider"></div>
+	<ul id="header_menu">
+	  <li class="header_menu_item">Historie</li>
+	  <li class="header_menu_item">Musikk</li>
+	  <li class="header_menu_item">Book oss</li>
+	</ul>
+      </div>
     </header>
-
+    
     <main>
-        <div id="main_content">
-            <!-- Conent panes should scale to the page size-->
-            <div class="content_pane">
-                <p>Nye snauweb!</p>
-            </div>
-            <div class="content_pane">
-                <p>Tekst og video!</p>
-            </div>
-            <div class="content_pane">
-                <p>Innhold!</p>
-            </div>
-        </div>
+      <div id="main_content">
+	<!-- Conent panes should scale to the page size-->
+	<div class="content_pane">
+          <p>Nye snauweb!</p>
+	</div>
+	<div class="content_pane">
+          <p>Tekst og video!</p>
+	</div>
+	<div class="content_pane">
+          <p>Innhold!</p>
+	</div>
+      </div>
     </main>
-
-    <footer id="footer">
-        Footer text here
+    
+    <footer>
+      Footer text here
     </footer>
+  </div>
 </body>
 
